--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="quotation">
+<div class="container d-flex flex-column min-vh-100 pb-5" *ngIf="quotation">
 
   <section>
     <p class="sub-title">Sélectionnez une affaire</p>
@@ -292,16 +292,18 @@
       </div>
     </div>
   </section>
-</div>
 
-<div class="row position-fixed bottom-0 start-0 w-100 bg-light shadow-sm p-3 m-0 ">
-  <div>
-    <button type="button" class="btn btn-secondary rounded-1 col-auto mx-5">
-      <i class="ai-arrow-left ms-2"></i>Etape précédente</button>
-  </div>
-  <div class="justify-content-end">
-    <button type="button" class="btn btn-secondary rounded-1 col-auto mx-5" *ngIf="canSaveQuotation()"
-      (click)="saveQuotation()">
-      Etape suivante<i class="ai-arrow-right ms-2"></i></button>
+  <div
+    class="position-fixed bottom-0 start-0 w-100 bg-light shadow-sm p-3 m-0 d-flex justify-content-between align-items-center z-3">
+    <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center">
+      <i class="ai-arrow-left"></i>
+      <span class="d-none d-sm-inline ms-2">Étape précédente</span>
+    </button>
+
+    <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center" *ngIf="canSaveQuotation()"
+      (click)="saveFieldsValue()">
+      <span class="d-none d-sm-inline me-2">Étape suivante</span>
+      <i class="ai-arrow-right"></i>
+    </button>
   </div>
 </div>
