--- a/client/src/app/modules/quotation/components/provision/provision.component.html
+++ b/client/src/app/modules/quotation/components/provision/provision.component.html
@@ -53,7 +53,7 @@
     <mat-accordion multi>
       <mat-expansion-panel expanded="false" class="service-tab ">
         <mat-expansion-panel-header>
-          <mat-panel-title>Service - {{getServiceLabel(service)}}
+          <mat-panel-title>Service - {{service.customLabel}}
           </mat-panel-title>
           <mat-panel-description>
             <mat-icon color="accent" *ngIf="!editMode && service.id" matTooltip="Modifier le type de service"
@@ -75,7 +75,7 @@
         (afterExpand)="onExpandedChange(provision.id)" [expanded]=" provision.id==inputProvisionId">
         <mat-expansion-panel-header>
           <mat-panel-title>
-            {{computeServiceLabel(service, true)}} {{computeProvisionLabel(service, provision, true)}}
+            {{computeProvisionLabel(service, provision, true)}}
           </mat-panel-title>
           <mat-panel-description>
             <span class="status-text"
@@ -106,7 +106,7 @@
   <div class="fab-extended-button-containter"><button mat-fab extended color="primary"
       (click)="createProvision(service)" *ngIf="editMode">
       <mat-icon>work</mat-icon>
-      Ajouter une prestation pour le service {{getServiceLabel(service)}}
+      Ajouter une prestation pour le service {{service.customLabel}}
     </button></div>
 </ng-container>
 <div class="fab-extended-button-containter"><button mat-fab extended color="primary" (click)="createService(asso)"
@@ -134,8 +134,7 @@
   <mat-menu #menu2="matMenu" style="min-height: 0px;padding: 0;" xPosition="before">
     <ng-container *ngFor="let service of asso.services">
       <button mat-menu-item [matMenuTriggerFor]="menu3" (mouseover)="setCurrentProvisionWorkflow(provision)"
-        *ngFor="let provision of service.provisions"><span
-          style="color:#c4ae8b">{{computeServiceLabel(service,false)}}</span>
+        *ngFor="let provision of service.provisions"><span style="color:#c4ae8b">{{service.customLabel}}</span>
         {{computeProvisionLabel(service, provision, true)}}</button>
     </ng-container>
   </mat-menu>
@@ -183,14 +182,13 @@
     <mat-divider></mat-divider>
     <ng-container *ngFor="let service of asso.services">
       <button mat-menu-item (click)="sendMissingAttachmentMail(service)">
-        <span>Demander des pièces manquantes pour le service {{getServiceLabel(service)}}</span>
+        <span>Demander des pièces manquantes pour le service {{service.customLabel}}</span>
       </button>
     </ng-container>
     <mat-divider></mat-divider>
     <ng-container *ngFor="let service of asso.services">
       <button mat-menu-item [matMenuTriggerFor]="menu4" (mouseover)="setCurrentProvisionWorkflow(provision)"
-        *ngFor="let provision of service.provisions"><span
-          style="color:#c4ae8b">{{computeServiceLabel(service,false)}}</span>
+        *ngFor="let provision of service.provisions"><span style="color:#c4ae8b">{{service.customLabel}}</span>
         {{computeProvisionLabel(service, provision, true)}}</button>
     </ng-container>
   </mat-menu>
@@ -201,7 +199,7 @@
   </button>
   <mat-divider></mat-divider>
   <button mat-menu-item (click)="sendMissingAttachmentMail(asso.services[0])" *ngIf="onlyOneProvision()">
-    <span>Demander des pièces manquantes pour le service {{getServiceLabel(asso.services[0])}}</span>
+    <span>Demander des pièces manquantes pour le service {{asso.services[0].customLabel}}</span>
   </button>
   <mat-divider></mat-divider>
   <button mat-menu-item
@@ -259,8 +257,7 @@
   <mat-menu #menu7="matMenu" style="min-height: 0px;padding: 0;" xPosition="before">
     <ng-container *ngFor="let service of asso.services">
       <button mat-menu-item [matMenuTriggerFor]="menu6" (mouseover)="setCurrentProvisionWorkflow(provision)"
-        *ngFor="let provision of service.provisions"><span
-          style="color:#c4ae8b">{{computeServiceLabel(service,false)}}</span>
+        *ngFor="let provision of service.provisions"><span style="color:#c4ae8b">{{service.customLabel}}</span>
         {{computeProvisionLabel(service, provision, true)}}</button>
     </ng-container>
   </mat-menu>
