--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -295,8 +295,9 @@
 
   <div
     class="position-fixed bottom-0 start-0 w-100 bg-light shadow-sm p-3 m-0 d-flex justify-content-between align-items-center z-3">
-    <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center">
-      <i class="ai-arrow-left"></i>
+    <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center"
+      (click)="goBackQuotation()">
+      <i class=" ai-arrow-left"></i>
       <span class="d-none d-sm-inline ms-2">Étape précédente</span>
     </button>
 
