--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -295,8 +295,8 @@
 
   <div
     class="position-fixed bottom-0 start-0 w-100 bg-light shadow-sm p-3 m-0 d-flex justify-content-between align-items-center z-3">
-    <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center"
-      (click)="goBackQuotation()">
+    <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center" data-bs-toggle="modal"
+      data-bs-target="#confirmBackModal">
       <i class=" ai-arrow-left"></i>
       <span class="d-none d-sm-inline ms-2">Étape précédente</span>
     </button>
@@ -306,5 +306,25 @@
       <span class="d-none d-sm-inline me-2">Étape suivante</span>
       <i class="ai-arrow-right"></i>
     </button>
+  </div>
+</div>
+
+<!-- Modal de confirmation -->
+<div class="modal fade" id="confirmBackModal" tabindex="-1" aria-labelledby="confirmBackModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="confirmBackModalLabel">Confirmation</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+      </div>
+      <div class="modal-body">
+        Êtes-vous sûr de vouloir revenir en arrière ? L'ensemble de votre progression sera perdue.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-danger ms-2" (click)="goBackQuotation()"
+          data-bs-dismiss="modal">Confirmer</button>
+      </div>
+    </div>
   </div>
 </div>
