--- a/client/src/app/modules/quotation/components/select-service-dialog/select-service-dialog.component.html
+++ b/client/src/app/modules/quotation/components/select-service-dialog/select-service-dialog.component.html
@@ -4,7 +4,7 @@
   <ul>
     <ng-container *ngFor="let service of assoAffaireOrder.services">
       <li class="pointer" *ngIf="!currentService || currentService.id !=service.id" (click)="selectService(service)">
-        {{service.customLabel}}</li>
+        {{service.serviceLabelToDisplay}}</li>
     </ng-container>
   </ul>
 </div>
