--- a/src/main/resources/mails/templates/quotation-page.html
+++ b/src/main/resources/mails/templates/quotation-page.html
@@ -101,10 +101,10 @@
                 style="border : solid; border-color: rgb(0,83,159);width: 680px;margin-top: 20px;">
                 <tr>
                     <td style="padding-top: 20px; text-align : center" colspan="2">
-                        <strong><span th:if="${service.customLabel!=null}"
-                                th:text="${service.customLabel}"></span></strong>
-                        <strong><span th:if="${service.customLabel==null}"
-                                th:text="${service.serviceType.label}"></span></strong>
+                        <strong><span th:if="${service.serviceLabelToDisplay!=null}"
+                                th:text="${service.serviceLabelToDisplay}"></span></strong>
+                        <strong><span th:if="${service.serviceLabelToDisplay==null}"
+                                th:text="${service.serviceTypes[0].label}"></span></strong>
                     </td>
                 </tr>
                 <th:block th:each="provision : ${service.provisions}"
