--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -116,7 +116,7 @@
             <div class="ps-3 ps-sm-4">
               <h4 class="h6 mb-2">
                 <a>{{service.customLabel?service.customLabel :
-                  service.serviceType.label}}</a>
+                  service.serviceTypes[0].label}}</a>
               </h4>
               <div class="text-body-secondary fs-sm me-3">
                 <span class="badge bg-info bg-opacity-10 text-info fs-xs">{{service.serviceStatus}}</span>
