--- a/client/src/app/modules/quotation/components/missing-attachment-queries/missing-attachment-queries.component.html
+++ b/client/src/app/modules/quotation/components/missing-attachment-queries/missing-attachment-queries.component.html
@@ -10,7 +10,7 @@
         <mat-accordion multi>
           <mat-expansion-panel expanded="false" class="service-tab ">
             <mat-expansion-panel-header>
-              <mat-panel-title>Service - {{getServiceLabel(service)}}
+              <mat-panel-title>Service - {{service.serviceLabelToDisplay}}
               </mat-panel-title>
             </mat-expansion-panel-header>
           </mat-expansion-panel>
