--- a/client-myjss/src/app/modules/my-services/description-my-account/description-my-account.component.html
+++ b/client-myjss/src/app/modules/my-services/description-my-account/description-my-account.component.html
@@ -1,13 +1,17 @@
 <section class="container pb-5 mb-md-3 mb-lg-4 mb-xxl-5">
   <div class="row pb-md-4 pb-xl-5">
-    <div class="col-md-6 mb-2 mb-md-0">
+    <div class="col-md-5 mb-2 mb-md-0">
       <div class="card border-0 h-100 bg-size-cover bg-position-center"
         style="background-image: url(assets/img/account/parcourir_mon_compte.jpg);">
         <div class="d-none d-sm-block d-md-none" style="height: 450px;"></div>
         <div class="d-sm-none" style="height: 350px;"></div>
       </div>
     </div>
-    <div class="col-md-6 col-xl-5 offset-xl-1">
+    <div class="col-md-1 d-flex align-items-end">
+      <img src="assets/img/announcement/vector.svg" />
+    </div>
+
+    <div class="col-md-6">
       <div class="pt-4 pb-sm-4 ps-md-4 ps-xl-0">
         <h2 class="h1 text-white pb-2 pb-sm-3 pb-xl-4">Parcourir l'espace <br>"Mon compte"</h2>
         <div class="d-flex pb-3 mb-2 mb-xl-3">
@@ -15,8 +19,7 @@
           <div class="ps-3">
             <h3 class="h5 text-white">Gestion de votre commande</h3>
             <p class="mb-0 text-body-secondary">Suivi de votre dossier en ligne via MyJSS et consultation des pièces
-              obligatoires, avec une
-              mise à jour en temps réel de l'avancement.</p>
+              obligatoires, avec une mise à jour en temps réel de l'avancement.</p>
           </div>
         </div>
         <div class="d-flex pb-3 mb-2 mb-xl-3">
