--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -96,8 +96,8 @@
 
 <section class="py-5">
   <div class="container py-3 py-sm-4 py-lg-5 my-md-2 my-lg-3 my-xl-4 my-xxl-5">
-    <div class="text-center">
-      <h2 class="h1 pb-3 mb-lg-4 text-white">Votre allié juridique de confiance</h2>
+    <div class="text-center pb-3">
+      <h2 class="h1 pb-1 mb-lg-2 text-white">Votre allié juridique de confiance</h2>
       <p>Optimisez vos démarches sur MyJSS la plateforme intuitive et performante du Journal Spécial des Sociétés</p>
     </div>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 pb-xl-2 pb-xxl-3">
@@ -311,8 +311,8 @@
         <div class="card h-100 border-0 rounded-5 w-100">
           <div class="card-body pb-3 px-3">
             <img src="assets/img/icons/Domiciliation.svg" alt="Icon">
-            <h3 class="h4 text-white" routerLink="/services/domiciliation" style="cursor: pointer;">Domiciliation</h3>
-            <p class="mb-0">Une domiciliation au cœur de Paris avec gestion simplifiée.</p>
+            <h3 class="h4 text-white" routerLink="/services/domiciliation" style="cursor: pointer;">Domiciliations</h3>
+            <p class="mb-0">Une adresse prestigieuse pour votre société en plein coeur de Paris.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
             <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openDomiciliation($event)"
