--- a/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
@@ -58,7 +58,7 @@
           <tr>
             <td>
               <generic-toggle [(model)]="selectedEntity.isMergeable"
-                label="Peut être fusionné à d'autres services fusionnable" [form]="entityForm"
+                label="Peut être fusionné à d'autres services fusionnables" [form]="entityForm"
                 propertyName="isMergeable" [isDisabled]="!editMode"></generic-toggle>
             </td>
           </tr>
