pagination for Exclusivity posts

--- a/client-myjss/src/app/modules/tools/components/exclusives/exclusives.component.css
+++ b/client-myjss/src/app/modules/tools/components/exclusives/exclusives.component.css
@@ -10,3 +10,9 @@
 .custom-input-group {
   --ar-input-group-border-color: var(--ar-gray-500);
 }
+
+.post-image {
+  height: 18rem;
+  object-fit: cover;
+  border-radius: 1rem;
+}
