--- a/client-myjss/src/app/modules/tools/components/exclusives/exclusives.component.html
+++ b/client-myjss/src/app/modules/tools/components/exclusives/exclusives.component.html
@@ -37,13 +37,14 @@
   </div>
   <div *ngIf="exclusivePosts && exclusivePosts.length>0 && !searchText">
     <div *ngFor="let post of exclusivePosts">
-      <article class="row g-0 border-0 mb-4">
-        <a class="col-sm-5 col-lg-4 bg-repeat-0 bg-size-cover bg-position-center rounded-5"
-          style="background-image: url(assets/img/blog/list/01.jpg); min-height: 16rem" aria-label="Post image"></a>
+      <article class="row g-0 border-0 mb-5">
+        <img class="col-sm-5 col-lg-4 rounded-5 post-image" (click)="openPost(post.slug, $event)"
+          [src]="post. media && post.media.urlLarge ? post.media.urlLarge : (post.media && post.media.urlFull ? post.media.urlFull : 'assets/img/blog/list/01.jpg')"
+          alt="Post image">
         <div class="col-sm-7 col-lg-8">
           <div class="pt-4 pb-sm-4 ps-sm-4 pe-lg-4">
             <h3>
-              <a class="card-text-truncate" (click)="openPost(post.slug, $event)">{{post.titleText}}</a>
+              <a class="card-title-truncate" (click)="openPost(post.slug, $event)">{{post.titleText}}</a>
             </h3>
             <p class="d-sm-none d-md-block card-text-truncate" [innerHTML]="post.excerptText | trustHtml">
             </p>
@@ -60,13 +61,14 @@
   </div>
   <div *ngIf="searchResults && searchResults.length>0 && searchText">
     <div *ngFor="let post of exclusivePosts">
-      <article class="row g-0 border-0 mb-4">
-        <a class="col-sm-5 col-lg-4 bg-repeat-0 bg-size-cover bg-position-center rounded-5"
-          style="background-image: url(assets/img/blog/list/01.jpg); min-height: 16rem" aria-label="Post image"></a>
+      <article class="row g-0 border-0 mb-5">
+        <img class="col-sm-5 col-lg-4 rounded-5 post-image" (click)="openPost(post.slug, $event)"
+          [src]="post.media.urlLarge ? post.media.urlLarge : (post.media.urlFull ? post.media.urlFull : 'assets/img/blog/list/01.jpg')"
+          alt="Post image">
         <div class="col-sm-7 col-lg-8">
           <div class="pt-4 pb-sm-4 ps-sm-4 pe-lg-4">
             <h3>
-              <a class="card-text-truncate" (click)="openPost(post.slug, $event)">{{post.titleText}}</a>
+              <a class="card-title-truncate" (click)="openPost(post.slug, $event)">{{post.titleText}}</a>
             </h3>
             <p class="d-sm-none d-md-block card-text-truncate" [innerHTML]="post.excerptText | trustHtml">
             </p>
@@ -83,34 +85,28 @@
   </div>
 
   <div
-    *ngIf="((!exclusivePosts || exclusivePosts.length==0) && !searchText) || ((!searchResults || searchResults.length==0) && searchText)">
+    *ngIf="((!exclusivePosts || exclusivePosts.length==0) && !searchText) && ((!searchResults || searchResults.length==0) && searchText)">
     <p> Aucun article trouvé</p>
   </div>
 
   <div class="row gy-3 align-items-center mt-lg-5 pt-2 pt-md-3 pt-lg-0 mb-md-2 mb-xl-4">
-    <div class="col col-md-4 col-6 order-md-1 order-1">
-      <div class="d-flex align-items-center"><span class="text-body-secondary fs-sm">Show</span>
-        <select class="form-select form-select-flush w-auto">
+    <div class="col col-8 order-md-1 order-1">
+      <div class="d-flex align-items-center"><span class="text-body-secondary fs-sm">Voir</span>
+        <select class="form-select form-select-flush w-auto" (change)="changePageSize($event)">
           <option value="6">6</option>
-          <option value="9" selected>9</option>
-          <option value="12">12</option>
+          <option value="9">9</option>
+          <option value="12" selected>12</option>
           <option value="24">24</option>
         </select>
       </div>
     </div>
-    <div class="col col-md-4 col-12 order-md-2 order-3 text-center">
-      <button class="btn btn-primary w-md-auto w-100" type="button">Load more posts</button>
-    </div>
-    <div class="col col-md-4 col-6 order-md-3 order-2">
-      <nav aria-label="Page navigation">
+    <div class="col col-4 order-md-1 order-1">
+      <nav *ngIf="totalPages > 1" aria-label="Page navigation">
         <ul class="pagination pagination-sm justify-content-end">
-          <li class="page-item active" aria-current="page">
-            <span class="page-link">1<span class="visually-hidden">(current)</span></span>
+          <li class="page-item" *ngFor="let page of [].constructor(totalPages); let i = index"
+            [class.active]="i === currentPage">
+            <a class="page-link" (click)="loadPosts(i, pageSize)">{{ i + 1 }}</a>
           </li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item"><a class="page-link" href="#">4</a></li>
-          <li class="page-item"><a class="page-link" href="#">5</a></li>
         </ul>
       </nav>
     </div>
