--- a/client-myjss/src/app/modules/tools/components/exclusives/exclusives.component.html
+++ b/client-myjss/src/app/modules/tools/components/exclusives/exclusives.component.html
@@ -17,7 +17,7 @@
   </div>
 </section>
 
-<section class="container py-5">
+<section class="container py-5" #exclusivitySection>
   <div class="row align-items-center gy-2 mb-4 pb-1 pb-sm-2 pb-lg-3">
     <div class="col-lg-8">
       <h2 class="mb-lg-0">Nos exclus</h2>
@@ -28,6 +28,9 @@
           <generic-input style="flex-grow: 1;" [(model)]="searchText" label="Rechercher" [form]="exclusivePostsForm"
             propertyName="secondSearchText" [isMandatory]="false" [isDisabled]="false" [isDisplayLabel]="false"
             (onFormChange)="searchForPosts()" [icon]="'search'" class="btn-search col"></generic-input>
+          <div *ngIf="isLoading" class="col-1 d-flex spinner-border rounded-circle text-dark me-2" role="status">
+            <span class="visually-hidden">chargement...</span>
+          </div>
           <button *ngIf="searchText" class="col-1 btn btn-link btn-search" (click)="clearSearch()">
             <i class="ai ai-cross-alt"></i>
           </button>
@@ -39,7 +42,7 @@
     <div *ngFor="let post of exclusivePosts">
       <article class="row g-0 border-0 mb-5">
         <img class="col-sm-5 col-lg-4 rounded-5 post-image" (click)="openPost(post.slug, $event)"
-          [src]="post. media && post.media.urlLarge ? post.media.urlLarge : (post.media && post.media.urlFull ? post.media.urlFull : 'assets/img/blog/list/01.jpg')"
+          [src]="post.media && post.media.urlLarge ? post.media.urlLarge : (post.media && post.media.urlFull ? post.media.urlFull : 'assets/img/blog/list/01.jpg')"
           alt="Post image">
         <div class="col-sm-7 col-lg-8">
           <div class="pt-4 pb-sm-4 ps-sm-4 pe-lg-4">
@@ -59,11 +62,11 @@
       </article>
     </div>
   </div>
-  <div *ngIf="searchResults && searchResults.length>0 && searchText">
-    <div *ngFor="let post of exclusivePosts">
+  <div *ngIf="paginatedSearchResults && paginatedSearchResults.length>0 && searchText">
+    <div *ngFor="let post of paginatedSearchResults">
       <article class="row g-0 border-0 mb-5">
         <img class="col-sm-5 col-lg-4 rounded-5 post-image" (click)="openPost(post.slug, $event)"
-          [src]="post.media.urlLarge ? post.media.urlLarge : (post.media.urlFull ? post.media.urlFull : 'assets/img/blog/list/01.jpg')"
+          [src]="post.media && post.media.urlLarge ? post.media.urlLarge : (post.media && post.media.urlFull ? post.media.urlFull : 'assets/img/blog/list/01.jpg')"
           alt="Post image">
         <div class="col-sm-7 col-lg-8">
           <div class="pt-4 pb-sm-4 ps-sm-4 pe-lg-4">
@@ -85,7 +88,7 @@
   </div>
 
   <div
-    *ngIf="((!exclusivePosts || exclusivePosts.length==0) && !searchText) && ((!searchResults || searchResults.length==0) && searchText)">
+    *ngIf="((!exclusivePosts || exclusivePosts.length==0) && !searchText) && ((!paginatedSearchResults || paginatedSearchResults.length==0) && searchText)">
     <p> Aucun article trouvé</p>
   </div>
 
