--- a/client-myjss/src/app/modules/tools/components/exclusives/exclusives.component.html
+++ b/client-myjss/src/app/modules/tools/components/exclusives/exclusives.component.html
@@ -38,9 +38,19 @@
       </div>
     </div>
   </div>
-
-  <div *ngIf="paginatedSearchResults && paginatedSearchResults.length>0 ">
-    <div *ngFor="let post of paginatedSearchResults">
+  <div class="accordion-item border-top mb-0" *ngIf="isLoading">
+    <div class="accordion-header">
+      <p class="article placeholder-glow">
+        <span class="placeholder placeholder-sm col-7 me-2"></span>
+        <span class="placeholder placeholder-sm col-4"></span>
+        <span class="placeholder placeholder-sm col-4 me-2"></span>
+        <span class="placeholder placeholder-sm col-6"></span>
+        <span class="placeholder placeholder-sm col-8"></span>
+      </p>
+    </div>
+  </div>
+  <div *ngIf="searchResults && searchResults.length>0 ">
+    <div *ngFor="let post of searchResults">
       <article class="row g-0 border-0 mb-5">
         <img class="col-sm-5 col-lg-4 rounded-5 post-image" (click)="openPost(post.slug, $event)"
           [src]="post.media && post.media.urlLarge ? post.media.urlLarge : (post.media && post.media.urlFull ? post.media.urlFull : 'assets/img/blog/list/01.jpg')"
@@ -64,7 +74,7 @@
     </div>
   </div>
 
-  <div *ngIf="!paginatedSearchResults || paginatedSearchResults.length==0">
+  <div *ngIf="(!searchResults || searchResults.length==0) && !isLoading">
     <p> Aucun article trouvé</p>
   </div>
 
@@ -72,9 +82,8 @@
     <div class="col-12 text-end order-md-1 order-1">
       <nav *ngIf="totalPages > 1" aria-label="Page navigation">
         <ul class="pagination pagination-sm justify-content-end">
-          <li class="page-item" *ngFor="let page of [].constructor(totalPages); let i = index"
-            [class.active]="i === currentPage">
-            <a class="page-link" (click)="loadPosts(i)">{{ i + 1 }}</a>
+          <li class="page-item" *ngFor="let p of pages" [class.active]="p === page">
+            <a class="page-link" (click)="goToPage(p)">{{ p + 1 }}</a>
           </li>
         </ul>
       </nav>
